5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1758_674.log
== TEST (2019-05-23 10:25:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v = array(eval(input("v: "))

print(size[v])
print(v[0])
print(v[-1])
print(v[max])
print(v[min])
print(v[sum])	
print(round(sum[v]/size[v], 2))			 
-- ERROR:
File "XXXX", line 5
    print(size[v])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:26:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
v = array(eval(input("v: "))

print(v[size])
print(v[0])
print(v[-1])
print(v[max])
print(v[min])
print(v[sum])	
print(round(sum[v]/v[size], 2))			 
-- ERROR:
File "XXXX", line 5
    print(v[size])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:27:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: "))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/v[size], 2))			 
-- ERROR:
File "XXXX", line 6
    print(size[v])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:28:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/v[size], 2))			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:28:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/v[size], 2))			 
-- EXECUTION TIME:
0.580008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/674/main.py", line 6, in <module>
    print(size[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:28:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/v[size], 2))			 
-- EXECUTION TIME:
0.362762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/674/main.py", line 6, in <module>
    print(size[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:28:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/size[v], 2))			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:28:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/size[v], 2))			 
-- EXECUTION TIME:
0.485242
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/674/main.py", line 6, in <module>
    print(size[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:28:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/size[v], 2))			 
-- EXECUTION TIME:
0.512979
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/674/main.py", line 6, in <module>
    print(size[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:28:47) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/size[v], 2))			 
-- EXECUTION TIME:
0.646229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/674/main.py", line 6, in <module>
    print(size[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:29:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/size[v], 2))			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:29:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size[v])
print(v[0])
print(v[-1])
print(max[v])
print(min[v])
print(sum[v])	
print(round(sum[v]/size[v], 2))			 
-- EXECUTION TIME:
0.370687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/674/main.py", line 6, in <module>
    print(size[v])
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:31:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))	
print(round(sum(v)/size(v), 2))			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:31:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
v = array(eval(input("v: ")))

print(size(v))
print(v[0])
print(v[-1])
print(max(v))
print(min(v))
print(sum(v))	
print(round(sum(v)/size(v), 2))			 
-- EXECUTION TIME:
0.471802
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
